--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,20 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!-- Required meta tags -->
   <meta charset="utf-8">
-  <title>MoneyGoalFront</title>
-  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="description" content="">
+  <meta name="author" content="ThemesLay">
+
+  <!-- Favicon icon -->
+  <link rel="icon" type="image/png" sizes="50x50" href="/src/assets/images/favicon.png">
+
+  <!-- theme css -->
+  <link href="/src/assets/css/main.css"  rel="stylesheet">
+
+  <title>OnBett - Online Betting HTML5 Responsive Landing Page</title>
+
 </head>
 <body>
   <app-root></app-root>
